// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders signOutcome component on successful sign 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignOutcome
    goToAuthorization={[Function]}
    links={
      Array [
        "Make Poblenou a car-free zone",
        "Ban diesel engines from the city",
        "More street lighting for the old town",
        "Reduce noise pollution",
      ]
    }
    petition={Object {}}
    petitionError=""
    petitionLink="http://something.com"
    signSuccess={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ImageOverlay
          contentPosition="bottom"
          height={300}
          overlayAlpha={0}
          overlayColor="#000000"
          source={1}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 34,
                "marginBottom": 30,
                "marginLeft": 20,
                "marginRight": 20,
                "textAlign": "center",
              }
            }
          >
            Your vote has been recorded anonymously
          </Text>
        </ImageOverlay>,
        <View
          style={
            Object {
              "flex": 1,
              "marginTop": 30,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "marginBottom": 20,
              }
            }
          >
            You may interested in these other petitions
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "#00F",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginVertical": 10,
                "textAlign": "left",
                "textDecorationLine": "underline",
              }
            }
          >
            Make Poblenou a car-free zone
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "#00F",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginVertical": 10,
                "textAlign": "left",
                "textDecorationLine": "underline",
              }
            }
          >
            Ban diesel engines from the city
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "#00F",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginVertical": 10,
                "textAlign": "left",
                "textDecorationLine": "underline",
              }
            }
          >
            More street lighting for the old town
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Object {
                "color": "#00F",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginVertical": 10,
                "textAlign": "left",
                "textDecorationLine": "underline",
              }
            }
          >
            Reduce noise pollution
          </Text>
        </View>,
        <Button
          enabled={true}
          name="Back to home"
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "center",
              "flex": 0,
              "width": 200,
            }
          }
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "rgb(246, 246, 246)",
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 34,
                "marginBottom": 30,
                "marginLeft": 20,
                "marginRight": 20,
                "textAlign": "center",
              }
            }
          >
            Your vote has been recorded anonymously
          </Text>,
          "contentPosition": "bottom",
          "height": 300,
          "overlayAlpha": 0,
          "overlayColor": "#000000",
          "source": 1,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Your vote has been recorded anonymously",
            "ellipsizeMode": "tail",
            "style": Object {
              "backgroundColor": "transparent",
              "color": "white",
              "fontSize": 34,
              "marginBottom": 30,
              "marginLeft": 20,
              "marginRight": 20,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "Your vote has been recorded anonymously",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "marginBottom": 20,
                }
              }
            >
              You may interested in these other petitions
            </Text>,
            Array [
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "color": "#00F",
                    "fontSize": 12,
                    "fontWeight": "bold",
                    "marginVertical": 10,
                    "textAlign": "left",
                    "textDecorationLine": "underline",
                  }
                }
              >
                Make Poblenou a car-free zone
              </Text>,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "color": "#00F",
                    "fontSize": 12,
                    "fontWeight": "bold",
                    "marginVertical": 10,
                    "textAlign": "left",
                    "textDecorationLine": "underline",
                  }
                }
              >
                Ban diesel engines from the city
              </Text>,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "color": "#00F",
                    "fontSize": 12,
                    "fontWeight": "bold",
                    "marginVertical": 10,
                    "textAlign": "left",
                    "textDecorationLine": "underline",
                  }
                }
              >
                More street lighting for the old town
              </Text>,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "color": "#00F",
                    "fontSize": 12,
                    "fontWeight": "bold",
                    "marginVertical": 10,
                    "textAlign": "left",
                    "textDecorationLine": "underline",
                  }
                }
              >
                Reduce noise pollution
              </Text>,
            ],
          ],
          "style": Object {
            "flex": 1,
            "marginTop": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "You may interested in these other petitions",
              "ellipsizeMode": "tail",
              "style": Object {
                "marginBottom": 20,
              },
            },
            "ref": null,
            "rendered": "You may interested in these other petitions",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Make Poblenou a car-free zone",
              "ellipsizeMode": "tail",
              "onPress": [Function],
              "style": Object {
                "color": "#00F",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginVertical": 10,
                "textAlign": "left",
                "textDecorationLine": "underline",
              },
            },
            "ref": null,
            "rendered": "Make Poblenou a car-free zone",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Ban diesel engines from the city",
              "ellipsizeMode": "tail",
              "onPress": [Function],
              "style": Object {
                "color": "#00F",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginVertical": 10,
                "textAlign": "left",
                "textDecorationLine": "underline",
              },
            },
            "ref": null,
            "rendered": "Ban diesel engines from the city",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "More street lighting for the old town",
              "ellipsizeMode": "tail",
              "onPress": [Function],
              "style": Object {
                "color": "#00F",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginVertical": 10,
                "textAlign": "left",
                "textDecorationLine": "underline",
              },
            },
            "ref": null,
            "rendered": "More street lighting for the old town",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Reduce noise pollution",
              "ellipsizeMode": "tail",
              "onPress": [Function],
              "style": Object {
                "color": "#00F",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginVertical": 10,
                "textAlign": "left",
                "textDecorationLine": "underline",
              },
            },
            "ref": null,
            "rendered": "Reduce noise pollution",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "enabled": true,
          "name": "Back to home",
          "onPress": [Function],
          "style": Object {
            "alignSelf": "center",
            "flex": 0,
            "width": 200,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ImageOverlay
            contentPosition="bottom"
            height={300}
            overlayAlpha={0}
            overlayColor="#000000"
            source={1}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "white",
                  "fontSize": 34,
                  "marginBottom": 30,
                  "marginLeft": 20,
                  "marginRight": 20,
                  "textAlign": "center",
                }
              }
            >
              Your vote has been recorded anonymously
            </Text>
          </ImageOverlay>,
          <View
            style={
              Object {
                "flex": 1,
                "marginTop": 30,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "marginBottom": 20,
                }
              }
            >
              You may interested in these other petitions
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "color": "#00F",
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginVertical": 10,
                  "textAlign": "left",
                  "textDecorationLine": "underline",
                }
              }
            >
              Make Poblenou a car-free zone
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "color": "#00F",
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginVertical": 10,
                  "textAlign": "left",
                  "textDecorationLine": "underline",
                }
              }
            >
              Ban diesel engines from the city
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "color": "#00F",
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginVertical": 10,
                  "textAlign": "left",
                  "textDecorationLine": "underline",
                }
              }
            >
              More street lighting for the old town
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "color": "#00F",
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginVertical": 10,
                  "textAlign": "left",
                  "textDecorationLine": "underline",
                }
              }
            >
              Reduce noise pollution
            </Text>
          </View>,
          <Button
            enabled={true}
            name="Back to home"
            onPress={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "flex": 0,
                "width": 200,
              }
            }
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "rgb(246, 246, 246)",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "color": "white",
                  "fontSize": 34,
                  "marginBottom": 30,
                  "marginLeft": 20,
                  "marginRight": 20,
                  "textAlign": "center",
                }
              }
            >
              Your vote has been recorded anonymously
            </Text>,
            "contentPosition": "bottom",
            "height": 300,
            "overlayAlpha": 0,
            "overlayColor": "#000000",
            "source": 1,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Your vote has been recorded anonymously",
              "ellipsizeMode": "tail",
              "style": Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 34,
                "marginBottom": 30,
                "marginLeft": 20,
                "marginRight": 20,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "Your vote has been recorded anonymously",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "marginBottom": 20,
                  }
                }
              >
                You may interested in these other petitions
              </Text>,
              Array [
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#00F",
                      "fontSize": 12,
                      "fontWeight": "bold",
                      "marginVertical": 10,
                      "textAlign": "left",
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  Make Poblenou a car-free zone
                </Text>,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#00F",
                      "fontSize": 12,
                      "fontWeight": "bold",
                      "marginVertical": 10,
                      "textAlign": "left",
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  Ban diesel engines from the city
                </Text>,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#00F",
                      "fontSize": 12,
                      "fontWeight": "bold",
                      "marginVertical": 10,
                      "textAlign": "left",
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  More street lighting for the old town
                </Text>,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  onPress={[Function]}
                  style={
                    Object {
                      "color": "#00F",
                      "fontSize": 12,
                      "fontWeight": "bold",
                      "marginVertical": 10,
                      "textAlign": "left",
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  Reduce noise pollution
                </Text>,
              ],
            ],
            "style": Object {
              "flex": 1,
              "marginTop": 30,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "You may interested in these other petitions",
                "ellipsizeMode": "tail",
                "style": Object {
                  "marginBottom": 20,
                },
              },
              "ref": null,
              "rendered": "You may interested in these other petitions",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "Make Poblenou a car-free zone",
                "ellipsizeMode": "tail",
                "onPress": [Function],
                "style": Object {
                  "color": "#00F",
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginVertical": 10,
                  "textAlign": "left",
                  "textDecorationLine": "underline",
                },
              },
              "ref": null,
              "rendered": "Make Poblenou a car-free zone",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "Ban diesel engines from the city",
                "ellipsizeMode": "tail",
                "onPress": [Function],
                "style": Object {
                  "color": "#00F",
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginVertical": 10,
                  "textAlign": "left",
                  "textDecorationLine": "underline",
                },
              },
              "ref": null,
              "rendered": "Ban diesel engines from the city",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "More street lighting for the old town",
                "ellipsizeMode": "tail",
                "onPress": [Function],
                "style": Object {
                  "color": "#00F",
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginVertical": 10,
                  "textAlign": "left",
                  "textDecorationLine": "underline",
                },
              },
              "ref": null,
              "rendered": "More street lighting for the old town",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "Reduce noise pollution",
                "ellipsizeMode": "tail",
                "onPress": [Function],
                "style": Object {
                  "color": "#00F",
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginVertical": 10,
                  "textAlign": "left",
                  "textDecorationLine": "underline",
                },
              },
              "ref": null,
              "rendered": "Reduce noise pollution",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "enabled": true,
            "name": "Back to home",
            "onPress": [Function],
            "style": Object {
              "alignSelf": "center",
              "flex": 0,
              "width": 200,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;

exports[`renders signOutcome component on unsuccessful sign 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignOutcome
    goToAuthorization={[Function]}
    links={
      Array [
        "Make Poblenou a car-free zone",
        "Ban diesel engines from the city",
        "More street lighting for the old town",
        "Reduce noise pollution",
      ]
    }
    petition={Object {}}
    petitionError=""
    petitionLink="http://something.com"
    signSuccess={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#FFF",
            "margin": 16,
            "marginTop": 30,
            "paddingHorizontal": 20,
            "paddingVertical": 40,
          }
        }
      >
        <Image
          source={1}
          style={
            Object {
              "alignSelf": "center",
              "height": 75,
              "marginBottom": 40,
              "width": 75,
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "center",
              "width": 250,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontSize": 14,
                "marginBottom": 4,
                "textAlign": "center",
              }
            }
          >
            Sign failed for
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "fontSize": 20,
                "fontWeight": "500",
                "marginVertical": 15,
                "textAlign": "center",
              }
            }
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "marginBottom": 20,
                "textAlign": "center",
              }
            }
          >
            Reason:  

You can return to view other petitions on the Secure Petitions website
          </Text>
          <Button
            enabled={true}
            name="Back to home"
            onPress={[Function]}
            style={Object {}}
          />
        </View>
      </View>,
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "rgb(246, 246, 246)",
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Image
            source={1}
            style={
              Object {
                "alignSelf": "center",
                "height": 75,
                "marginBottom": 40,
                "width": 75,
              }
            }
          />,
          <View
            style={
              Object {
                "alignSelf": "center",
                "width": 250,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 14,
                  "marginBottom": 4,
                  "textAlign": "center",
                }
              }
            >
              Sign failed for
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginVertical": 15,
                  "textAlign": "center",
                }
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "marginBottom": 20,
                  "textAlign": "center",
                }
              }
            >
              Reason:  

You can return to view other petitions on the Secure Petitions website
            </Text>
            <Button
              enabled={true}
              name="Back to home"
              onPress={[Function]}
              style={Object {}}
            />
          </View>,
        ],
        "style": Object {
          "alignSelf": "stretch",
          "backgroundColor": "#FFF",
          "margin": 16,
          "marginTop": 30,
          "paddingHorizontal": 20,
          "paddingVertical": 40,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
            "style": Object {
              "alignSelf": "center",
              "height": 75,
              "marginBottom": 40,
              "width": 75,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 14,
                    "marginBottom": 4,
                    "textAlign": "center",
                  }
                }
              >
                Sign failed for
              </Text>,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginVertical": 15,
                    "textAlign": "center",
                  }
                }
              />,
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "marginBottom": 20,
                    "textAlign": "center",
                  }
                }
              >
                Reason:  

You can return to view other petitions on the Secure Petitions website
              </Text>,
              <Button
                enabled={true}
                name="Back to home"
                onPress={[Function]}
                style={Object {}}
              />,
            ],
            "style": Object {
              "alignSelf": "center",
              "width": 250,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "Sign failed for",
                "ellipsizeMode": "tail",
                "style": Object {
                  "fontSize": 14,
                  "marginBottom": 4,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "Sign failed for",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": undefined,
                "ellipsizeMode": "tail",
                "style": Object {
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginVertical": 15,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "Reason:  

You can return to view other petitions on the Secure Petitions website",
                "ellipsizeMode": "tail",
                "style": Object {
                  "marginBottom": 20,
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "Reason:  

You can return to view other petitions on the Secure Petitions website",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "enabled": true,
                "name": "Back to home",
                "onPress": [Function],
                "style": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#FFF",
              "margin": 16,
              "marginTop": 30,
              "paddingHorizontal": 20,
              "paddingVertical": 40,
            }
          }
        >
          <Image
            source={1}
            style={
              Object {
                "alignSelf": "center",
                "height": 75,
                "marginBottom": 40,
                "width": 75,
              }
            }
          />
          <View
            style={
              Object {
                "alignSelf": "center",
                "width": 250,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 14,
                  "marginBottom": 4,
                  "textAlign": "center",
                }
              }
            >
              Sign failed for
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 20,
                  "fontWeight": "500",
                  "marginVertical": 15,
                  "textAlign": "center",
                }
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "marginBottom": 20,
                  "textAlign": "center",
                }
              }
            >
              Reason:  

You can return to view other petitions on the Secure Petitions website
            </Text>
            <Button
              enabled={true}
              name="Back to home"
              onPress={[Function]}
              style={Object {}}
            />
          </View>
        </View>,
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "rgb(246, 246, 246)",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Image
              source={1}
              style={
                Object {
                  "alignSelf": "center",
                  "height": 75,
                  "marginBottom": 40,
                  "width": 75,
                }
              }
            />,
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "width": 250,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 14,
                    "marginBottom": 4,
                    "textAlign": "center",
                  }
                }
              >
                Sign failed for
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginVertical": 15,
                    "textAlign": "center",
                  }
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "marginBottom": 20,
                    "textAlign": "center",
                  }
                }
              >
                Reason:  

You can return to view other petitions on the Secure Petitions website
              </Text>
              <Button
                enabled={true}
                name="Back to home"
                onPress={[Function]}
                style={Object {}}
              />
            </View>,
          ],
          "style": Object {
            "alignSelf": "stretch",
            "backgroundColor": "#FFF",
            "margin": 16,
            "marginTop": 30,
            "paddingHorizontal": 20,
            "paddingVertical": 40,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": 1,
              "style": Object {
                "alignSelf": "center",
                "height": 75,
                "marginBottom": 40,
                "width": 75,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontSize": 14,
                      "marginBottom": 4,
                      "textAlign": "center",
                    }
                  }
                >
                  Sign failed for
                </Text>,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontSize": 20,
                      "fontWeight": "500",
                      "marginVertical": 15,
                      "textAlign": "center",
                    }
                  }
                />,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "marginBottom": 20,
                      "textAlign": "center",
                    }
                  }
                >
                  Reason:  

You can return to view other petitions on the Secure Petitions website
                </Text>,
                <Button
                  enabled={true}
                  name="Back to home"
                  onPress={[Function]}
                  style={Object {}}
                />,
              ],
              "style": Object {
                "alignSelf": "center",
                "width": 250,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "Sign failed for",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "fontSize": 14,
                    "marginBottom": 4,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "Sign failed for",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": undefined,
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "fontSize": 20,
                    "fontWeight": "500",
                    "marginVertical": 15,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "Reason:  

You can return to view other petitions on the Secure Petitions website",
                  "ellipsizeMode": "tail",
                  "style": Object {
                    "marginBottom": 20,
                    "textAlign": "center",
                  },
                },
                "ref": null,
                "rendered": "Reason:  

You can return to view other petitions on the Secure Petitions website",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "enabled": true,
                  "name": "Back to home",
                  "onPress": [Function],
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;
